# UsersSibguty

./: CMakeLists.txt  README.md  main.cpp
Components/: BuilderComponents.cpp  BuilderComponents.h  Content.cpp  Content.h  MainMenuWindow.cpp  MainMenuWindow.h
Components/Commands/: FacultetsSectionShowCommand.cpp  FacultetsSectionShowCommand.h  GroupsSectionShowCommand.cpp  GroupsSectionShowCommand.h  HistorySearchSectionShowCommand.cpp  HistorySearchSectionShowCommand.h  ICommand.h  ICommandOfFilters.h  IComponentControlCommand.h  MainSectionShowCommand.cpp  MainSectionShowCommand.h  UsersSectionShowCommand.cpp  UsersSectionShowCommand.h
Components/CreateContent/: CreateFacultetsTableGroups.cpp  CreateFacultetsTableGroups.h  CreateGroupsTableContent.cpp  CreateGroupsTableContent.h  CreateHistorySearchContent.cpp  CreateHistorySearchContent.h  CreateMainMenuContent.cpp  CreateMainMenuContent.h  CreateUsersTableContent.cpp  CreateUsersTableContent.h  ICreateContentSection.h
Components/CreateNavigationPanel/: CreateMainMenuNavigationPanel.cpp  CreateMainMenuNavigationPanel.h  CreateUsersTableNavigationPanel.cpp  CreateUsersTableNavigationPanel.h  ICreateNavigationPanel.h
Contents/: Content.cpp  Content.h  IShowContent.h  IShowContentFacultets.cpp  IShowContentFacultets.h  IShowContentGroups.cpp  IShowContentGroups.h  IShowContentHistorySearch.cpp  IShowContentHistorySearch.h  IShowContentMain.cpp  IShowContentMain.h  IShowContentUsers.cpp  IShowContentUsers.h
Data/: release.txt
Helpers/: FileStreamHelpers.cpp  FileStreamHelpers.h  LayoutHelpers.cpp  LayoutHelpers.h
Widgets/: ActionButton.cpp  ActionButton.h  MainMenu.cpp  MainMenu.h
